Fixed OS.js z-index issue due to update to OS.js code specifically Window._getZindex()

--- a/css/app.css
+++ b/css/app.css
@@ -122,7 +122,6 @@ html, body {
     margin-right: -1px;
     top: 0px;
     left: 0px;
-    z-index: 99999999;
 }
 
 .visiblecursor.hide {
